# kosuzu

./: .gitignore  kosuzu.py  pyproject.toml  utils.py
data/: config_example.toml
plugins/: all_mute.py  base.py  plugin_switch.py
plugins/bilibili/: util.py
plugins/bililive/: __init__.py  command.py
