[tool.poetry]
name = "kosuzu"
version = "0.0.1"
description = ""
authors = ["shirokurakana <admin@thdog.moe>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot = "^1.8.2"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
