[tool.poetry]
name = "kosuzu"
version = "0.0.1"
description = ""
authors = ["shirokurakana <admin@thdog.moe>"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot = "^1.8.2"
APScheduler = "^3.7.0"
toml = "^0.10.2"
ujson = "^4.0.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
